--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="dot">dot</string>
     <string name="next">Next</string>
     <string name="skip">Skip</string>
+    <string name="full_name">Full name</string>
+    <string name="weigth">Weight (Kg)</string>
+    <string name="height">Height (Cm)</string>
+    <string name="age">Age</string>
 </resources>
