--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="weigth">Weight (Kg)</string>
     <string name="height">Height (Cm)</string>
     <string name="age">Age</string>
+    <string name="submit">Submit</string>
+    <string name="activity_type">Activity Type</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="gender">Gender</string>
+    <string name="let_s_find_out_your_daily_calories_needs">Let\'s find out your daily calories needs</string>
+    <string name="screening">Screening</string>
 </resources>
