Update transfer learning and add tflite

--- a/notebooks/04_Transfer_Learning_TFLITE.ipynb
+++ b/notebooks/04_Transfer_Learning_TFLITE.ipynb
@@ -115,27 +115,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YQ4K8M1tBJBk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5bf5a7c4-9ae0-4af6-85bc-df6d104b63a4"
+        "id": "YQ4K8M1tBJBk"
       },
       "source": [
         "!unzip -q dataset_cleaned_v2.zip\n",
         "!mv /content/content/dataset /content\n",
         "!rm -rf /content/content"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "mv: cannot move '/content/content/dataset' to '/content/dataset': Directory not empty\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -719,7 +707,7 @@
           "height": 17
         },
         "id": "Dl9PgOjZmPt0",
-        "outputId": "21fff14c-ab54-42af-d32d-a751529facbe"
+        "outputId": "5d6f4eea-2c1a-462f-c9c8-ddf91d73bd3d"
       },
       "source": [
         "try:\n",
@@ -727,11 +715,11 @@
         "    \n",
         "    files.download(tflite_model_file)\n",
         "    files.download('labels.txt')\n",
-        "    files.download(model.h5)\n",
+        "    files.download('model.h5')\n",
         "except:\n",
         "    pass"
       ],
-      "execution_count": 38,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -791,7 +779,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_c23f0599-df48-4d76-b6e0-20803009c082\", \"model.tflite\", 2647632)"
+              "download(\"download_d356a2c2-2eed-4bb8-9734-d40540ffb60a\", \"model.tflite\", 2647632)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
@@ -859,7 +847,75 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_0dba9020-cf21-4119-a95a-a7f25af41c84\", \"labels.txt\", 117)"
+              "download(\"download_3dc145ce-4344-4f1a-b8c7-62e9dde386c5\", \"labels.txt\", 118)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "download(\"download_4a203b2a-3355-44ed-bb52-5c2a4bd12403\", \"model.h5\", 9513024)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
