--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,14 @@
     <string name="start">start</string>
     <string name="welcome">Welcome</string>
     <string name="calorie_percentage">%1$d %%</string>
+    <string name="confidence_percentage">%1$d %%</string>
     <string name="calorie_progress">%1$d/%2$d KCal</string>
     <string name="calorie_label">%1$d KCal</string>
     <string name="add_food">Add Food</string>
     <string name="today_s_food">Today\'s Food</string>
     <string name="please_wait">Please Wait</string>
     <string name="it_s_too_quite_here_add_your_first_food">It’s Too Quite here. Add your first food</string>
+    <string name="food_image">Food Image</string>
+    <string name="food_detector">Food Detector</string>
+    <string name="detection_result">Detection Result</string>
 </resources>
