Update transfer learning and tflite code

--- a/notebooks/04_Transfer_Learning_TFLITE.ipynb
+++ b/notebooks/04_Transfer_Learning_TFLITE.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "!pip install gdown -q"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "import matplotlib.pylab as plt\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "print(\"\\u2022 Using TensorFlow Hub Version: \", hub.__version__)\n",
         "print('\\u2022 GPU Device Found.' if tf.test.is_gpu_available() else '\\u2022 GPU Device Not Found. Running on CPU')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
       "source": [
         "!gdown 'https://drive.google.com/uc?id=1xGVpcGWblW2xc8WR7LBi5s4rqfNdwQYr' -O dataset_cleaned_v2.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
       "source": [
         "!ls /content/dataset/train"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "valid_dir = \"/content/dataset/dev\"\n",
         "test_dir = \"/content/dataset/test\""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         "               'sate', 'soup', 'sushi', 'bread', 'egg', 'fried_rice', 'meat',\n",
         "               'pizza', 'soto', 'spaghetti', 'vegfruit']"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
         "with open('labels.txt', 'w') as f:\n",
         "    f.write('\\n'.join(class_names))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "IMAGE_SIZE = (pixels, pixels)\n",
         "print(\"Using {} with input size {} and output dimension {}\".format(MODULE_HANDLE, IMAGE_SIZE, FV_SIZE))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
       "source": [
         "module_selection"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
       "source": [
         "BATCH_SIZE = 64 #@param {type:\"integer\"}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "source": [
         "do_fine_tuning = False #@param {type:\"boolean\"}"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
         "                                   output_shape=[FV_SIZE],\n",
         "                                   trainable=do_fine_tuning)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
         "else:\n",
         "    feature_extractor.trainable = False"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,7 +358,7 @@
         "                  loss='categorical_crossentropy',\n",
         "                  metrics=['accuracy'])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +409,7 @@
         "    class_mode='categorical'\n",
         ")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
         "                epochs=EPOCHS,\n",
         "                validation_data=validation_generator)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -552,7 +552,7 @@
         "scores = model.evaluate(test_generator)\n",
         "print(\"%s%s: %.2f%%\" % (\"test acc: \", model.metrics_names[1], scores[1]*100))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +586,7 @@
       "source": [
         "model.save('model.h5')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
         "# YOUR CODE HERE\n",
         "tf.saved_model.save(model, export_dir)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +648,7 @@
         "else:\n",
         "    optimization = tf.lite.Optimize.DEFAULT"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,15 +659,15 @@
       "source": [
         "# EXERCISE: Use the TFLiteConverter SavedModel API to initialize the converter\n",
         "\n",
-        "converter = tf.lite.TFLiteConverter.from_saved_model(export_dir) # YOUR CODE HERE\n",
+        "converter = tf.lite.TFLiteConverter.from_saved_model(export_dir)\n",
         "\n",
         "# Set the optimzations\n",
-        "converter.optimizations = [optimization] # YOUR CODE HERE\n",
+        "converter.optimizations = [optimization]\n",
         "\n",
         "# Invoke the converter to finally generate the TFLite model\n",
-        "tflite_model = converter.convert() # YOUR CODE HERE"
+        "tflite_model = converter.convert()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +683,7 @@
         "tflite_model_file = pathlib.Path('./model.tflite')\n",
         "tflite_model_file.write_bytes(tflite_model)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -719,7 +719,7 @@
         "except:\n",
         "    pass"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
