--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="female">Female</string>
     <string name="male">Male</string>
     <string name="gender">Gender</string>
-    <string name="let_s_find_out_your_daily_calories_needs">Let\'s find out your daily calories needs</string>
+    <string name="let_s_find_out_your_daily_calories_needs">Let\'s find out your daily calorie need</string>
     <string name="screening">Screening</string>
     <string name="check_mark">check mark</string>
     <string name="success">Success</string>
@@ -27,7 +27,7 @@
     <string name="add_food">Add Food</string>
     <string name="today_s_food">Today\'s Food</string>
     <string name="please_wait">Please Wait</string>
-    <string name="it_s_too_quite_here_add_your_first_food">It’s Too Quite here. Add your first food</string>
+    <string name="it_s_too_quite_here_add_your_first_food">It’s too quite here. Add your first food</string>
     <string name="food_image">Food Image</string>
     <string name="food_detector">Food Detector</string>
     <string name="detection_result">Detection Result</string>
